refactor: change token to its own table